tests/syntax_error/assign_to_None.jou
def foo() -> None:
    # error message is kinda weird, but IMO it's ok.
    # Not many people will run into this. It's not tempting for a Python programmer.
    None = 123  # Error: None is not a value in Jou, use e.g. -1 for numbers or NULL for pointers
